# DrawingShapeRecognition

./: .gitignore  CALIBRATION_GUIDE.md  CMakeLists.txt  README.md
aruco_markers/: generate_markers.py
calibration_data/: README.md
docs/: CAMERA_SELECTION.md  USAGE_GUIDE.md
include/: AppController.hpp  OutputManager.hpp  PerspectiveTransformer.hpp  ShapeClassifier.hpp  ShapeDetector.h  ShapeQualityAnalyzer.hpp  ShapeSegmenter.hpp  VideoSource.hpp
src/: AppController.cpp  OutputManager.cpp  PerspectiveTransformer.cpp  ShapeClassifier.cpp  ShapeDetector.cpp  ShapeQualityAnalyzer.cpp  ShapeSegmenter.cpp  VideoSource.cpp  main.cpp
test/: 4_aruco_birdseye_view.cpp  test_aruco_detection.cpp  test_birdseye_calibration.cpp  test_debug_aspect_ratio.cpp  test_interactive_calibration.cpp
tools/: 1_generate_charuco_calibration_board.py  2_calibrate_camera.cpp  2_calibrate_camera_charuco.cpp  3_test_calibration_accuracy.cpp  4_aruco_birdseye_view.cpp  QUICK_START.md  README_CALIBRATION.md  charuco_board_config.txt  charuco_board_config_CORRECTED.txt
